--- a/lib/rumbl_web/templates/video/form.html.heex
+++ b/lib/rumbl_web/templates/video/form.html.heex
@@ -5,19 +5,23 @@
     </div>
   <% end %>
 
-  <%= label f, :url %>
-  <%= text_input f, :url %>
-  <%= error_tag f, :url %>
+  <%= label(f, :url) %>
+  <%= text_input(f, :url) %>
+  <%= error_tag(f, :url) %>
 
-  <%= label f, :title %>
-  <%= text_input f, :title %>
-  <%= error_tag f, :title %>
+  <%= label(f, :title) %>
+  <%= text_input(f, :title) %>
+  <%= error_tag(f, :title) %>
 
-  <%= label f, :description %>
-  <%= textarea f, :description %>
-  <%= error_tag f, :description %>
+  <%= label(f, :category_id, "Category") %>
+  <%= select(f, :category_id, category_select_options(@categories), prompt: "Choose a category") %>
+  <%= error_tag(f, :category) %>
+
+  <%= label(f, :description) %>
+  <%= textarea(f, :description) %>
+  <%= error_tag(f, :description) %>
 
   <div>
-    <%= submit "Save" %>
+    <%= submit("Save") %>
   </div>
 </.form>
