--- a/lib/rumbl_web/templates/video/index.html.heex
+++ b/lib/rumbl_web/templates/video/index.html.heex
@@ -11,20 +11,26 @@
     </tr>
   </thead>
   <tbody>
-<%= for video <- @videos do %>
-    <tr>
-      <td><%= video.url %></td>
-      <td><%= video.title %></td>
-      <td><%= video.description %></td>
+    <%= for video <- @videos do %>
+      <tr>
+        <td><%= video.url %></td>
+        <td><%= video.title %></td>
+        <td><%= video.description %></td>
 
-      <td>
-        <span><%= link "Show", to: Routes.video_path(@conn, :show, video) %></span>
-        <span><%= link "Edit", to: Routes.video_path(@conn, :edit, video) %></span>
-        <span><%= link "Delete", to: Routes.video_path(@conn, :delete, video), method: :delete, data: [confirm: "Are you sure?"] %></span>
-      </td>
-    </tr>
-<% end %>
+        <td>
+          <span><%= link("Show", to: Routes.video_path(@conn, :show, video)) %></span>
+          <span><%= link("Edit", to: Routes.video_path(@conn, :edit, video)) %></span>
+          <span>
+            <%= link("Delete",
+              to: Routes.video_path(@conn, :delete, video),
+              method: :delete,
+              data: [confirm: "Are you sure?"]
+            ) %>
+          </span>
+        </td>
+      </tr>
+    <% end %>
   </tbody>
 </table>
 
-<span><%= link "New Video", to: Routes.video_path(@conn, :new) %></span>
+<span><%= link("New Video", to: Routes.video_path(@conn, :new)) %></span>
