Make video slug urls

--- a/lib/rumbl_web/templates/video/index.html.heex
+++ b/lib/rumbl_web/templates/video/index.html.heex
@@ -22,7 +22,10 @@
           ) %>
         </td>
         <td>
-          <%= link("Watch", to: Routes.watch_path(@conn, :show, video), class: "button") %>
+          <%= link("Watch",
+            to: Routes.watch_path(@conn, :show, video),
+            class: "button"
+          ) %>
         </td>
       </tr>
     <% end %>
