--- a/lib/rumbl_web/templates/layout/root.html.heex
+++ b/lib/rumbl_web/templates/layout/root.html.heex
@@ -7,6 +7,8 @@
     <meta name="csrf-token" content={csrf_token_value()} />
     <%= live_title_tag(assigns[:page_title] || "Rumbl", suffix: " · Phoenix Framework") %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")} />
+
+    <script>window.userToken = "<%= assigns[:user_token] %>"</script>
     <script
       defer
       phx-track-static
